--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,4 @@
 /*--------------------------------------------Font Links*/
-@import url('https://fonts.googleapis.com/css2?family=Nixie+One&family=Special+Elite&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Itim&family=Special+Elite&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Special+Elite&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Special+Elite&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Tangerine:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
@@ -210,9 +206,6 @@ i.left {
     padding-bottom: 20px;
 }
 
-@media (max-width: 768px){
-    
-}
 
 
 /*---------------------------------------------/General*/
@@ -295,7 +288,6 @@ nav .brand-logo {
     margin-right: 10px;
     padding: 5px;
 }
-
 
 .btn-light:hover {
     color: rgb(255, 242, 210);
@@ -436,8 +428,7 @@ nav .brand-logo {
     }
 }
 
-
-/*Following code from: https://stackoverflow.com/questions/12337821/css3-scrollbar-styling-on-a-div*/
+/* Following code from: https://stackoverflow.com/questions/12337821/css3-scrollbar-styling-on-a-div */
 .page::-webkit-scrollbar {
     width: 12px;
     opacity: 100%;
@@ -525,7 +516,6 @@ nav .brand-logo {
     color: rgba(18, 155, 41, 0.877);
 }
 
-
 .format-view {
     white-space: normal;
     overflow-wrap: break-word;
@@ -555,7 +545,6 @@ nav .brand-logo {
 }
 
 @media(min-width: 768px) {
-
     .page-view {
         min-height:600px;
         max-width: 700px;
@@ -567,27 +556,24 @@ nav .brand-logo {
         word-wrap: break-word;
         margin-left: 40px;
     }
-
-
 }
 
 @media(min-width: 992px) {
     .works-btn {
         margin-top: 15px;
         margin-left: 20px;
-}
+    }
 
     .view-genre{
         margin-left:25px;
     }
-
 }
 
 /*---------------------------------------------/View*/
 /*---------------------------------------------Create*/
 .form-heading{
     margin-top: 50px;
-    color: rgb(80, 42, 7);
+    color: rgb(90, 7, 18);
     text-shadow: 0.5px 0.5px 2px black;
 }
 
@@ -767,7 +753,7 @@ nav .brand-logo {
 
 /*---------------------------------------------/Favourites*/
 
-/* Error Messages Flash */
+/*---------------------------------------------Messages Flash */
 p.message, p.error {
     background-color: #ffbfbfcf;
     border-radius: 2em;
@@ -783,7 +769,7 @@ p.info {
     padding-bottom: 1em;
     text-align: center;
 }
-
+/*---------------------------------------------/Messages Flash */
 /*---------------------------------------------Images*/
 #work-banner{
     background:url(../images/pen.jpg);
