--- a/templates/base.html
+++ b/templates/base.html
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>WritingIn</title>
-</head>
-<body>
-    <header>
-        <nav>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+      <title>WritingIn</title>
+   </head>
+   <body>
+      <header>
+         <!-- basic structure from Code Institute tutorial video (task-manager) -->
+         <!-- navbar -->
+         <nav>
             <div class="nav-wrapper nav-base">
-                <a href="{{ url_for('get_works') }}" class="brand-logo">WritingIn</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_works') }}">Home</a></li>
-                    {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('add_work') }}">Create</a></li>
-                        <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('register') }}">Sign Up</a></li>
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
-                    {% endif %}
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                    <li><a href="{{ url_for('get_works') }}">Home</a></li>
-                    {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('add_work') }}">Create</a></li>
-                        <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
-                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('register') }}">Sign Up</a></li>
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
-                    {% endif %}
-                </ul>
+               <a href="{{ url_for('get_works') }}" class="brand-logo">WritingIn</a>
+               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+               <ul id="nav-mobile" class="right hide-on-med-and-down">
+                  <li><a href="{{ url_for('get_works') }}">Home</a></li>
+                  {% if session.user %}
+                  <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                  <li><a href="{{ url_for('add_work') }}">Create</a></li>
+                  <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
+                  <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                  {% else %}
+                  <li><a href="{{ url_for('register') }}">Sign Up</a></li>
+                  <li><a href="{{ url_for('login') }}">Login</a></li>
+                  {% endif %}
+               </ul>
+               <!-- side-nav for smaller screen -->
+               <ul class="side-nav" id="mobile-demo">
+                  <li><a href="{{ url_for('get_works') }}">Home</a></li>
+                  {% if session.user %}
+                  <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                  <li><a href="{{ url_for('add_work') }}">Create</a></li>
+                  <li><a href="{{ url_for('my_favourites', username=session['user']) }}">Favourites</a></li>
+                  <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                  {% else %}
+                  <li><a href="{{ url_for('register') }}">Sign Up</a></li>
+                  <li><a href="{{ url_for('login') }}">Login</a></li>
+                  {% endif %}
+               </ul>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <row>
-                    <p class="{{category}}">{{ message }}</p>
-                </row>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-    </div>
-    
-    {% block content %}
-    {% endblock %}
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
-</body>
+         </nav>
+      </header>
+      <!-- Flash Messages (error and info) -->
+      <div class="container">
+         {% with messages = get_flashed_messages(with_categories=true) %}
+         {% if messages %}
+         {% for category, message in messages %}
+         <row>
+            <p class="{{category}}">{{ message }}</p>
+         </row>
+         {% endfor %}
+         {% endif %}
+         {% endwith %}
+      </div>
+      {% block content %}
+      {% endblock %}
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+      <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+   </body>
 </html>
