--- a/templates/register.html
+++ b/templates/register.html
@@ -1,46 +1,45 @@
 {% extends 'base.html' %}
 {% block content %}
+<!-- basic structure from Code Institute tutorial video (task-manager) -->
 <div class="container">
-    <h1 class="center-align form-heading">Register</h1>
-
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
-            <div class="card-panel">
-                <!-- username -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix create-icons"></i>
-                        <input id="username" name="username" type="text" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="username">Username</label>
-                    </div>
-                </div>
-                <!-- password -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-lock prefix create-icons"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- register -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Register
-                    </button>
-                </div>
+   <h1 class="center-align form-heading">Register</h1>
+   <div class="row">
+      <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+         <div class="card-panel">
+            <!-- username -->
+            <div class="row">
+               <div class="input-field col s12">
+                  <i class="fas fa-user-plus prefix create-icons"></i>
+                  <input id="username" name="username" type="text" minlength="5"
+                     maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                  <label for="username">Username</label>
+               </div>
             </div>
-        </form>
-    </div>
-
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                Already Registered?
-                <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
-            </p>
-        </div>
-    </div>
+            <!-- password -->
+            <div class="row">
+               <div class="input-field col s12">
+                  <i class="fas fa-lock prefix create-icons"></i>
+                  <input id="password" name="password" type="password" minlength="5"
+                     maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                  <label for="password">Password</label>
+               </div>
+            </div>
+            <!-- register -->
+            <div class="row">
+               <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
+               Register
+               </button>
+            </div>
+         </div>
+      </form>
+   </div>
+   <div class="row">
+      <div class="col s12">
+         <p class="center-align">
+            Already Registered?
+            <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
+         </p>
+      </div>
+   </div>
 </div>
 {% endblock %}
