--- a/templates/create.html
+++ b/templates/create.html
@@ -31,7 +31,7 @@
                   <div class="input-field col s12">
                      <i class="material-icons prefix create-icons">grade</i>
                      <input id="title" name="title" type="text" class="validate" required>
-                     <label for="icon_prefix">Title</label>
+                     <label for="title">Title</label>
                   </div>
                </div>
                <!-- Content of writing -->
@@ -39,7 +39,7 @@
                   <div class="input-field col s12">
                      <i class="material-icons prefix create-icons">create</i>
                      <textarea name="writing" id="writing" class="materialize-textarea" required></textarea>
-                     <label for="icon_prefix">Creation</label>
+                     <label for="writing">Creation</label>
                   </div>
                </div>
                <!-- Submit button -->
