--- a/templates/view_work.html
+++ b/templates/view_work.html
@@ -38,7 +38,7 @@
             <div class="view-row row">
             <!-- Content of writing (function name not poetry related - used for all work) -->
                {% for writing in format_poetry_writing(work.writing) %}
-               <p class="format-view left">{{writing}}</p>
+               <p class="format-view">{{writing}}</p>
                {% endfor %}
             </div>
          </div>
