--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,7 +165,7 @@ h3 {
 i.left {
     margin-right:5px;
 }
-
+/* Structure of buttons below modelled on Facebook sign-in button */
 .filter-button{
     margin-left: 0;
     margin-right: 0;
@@ -248,8 +248,6 @@ nav .brand-logo {
     display: inline-block;
     width: 85%;
     height:250px;
-    overflow-wrap: break-all;
-    word-wrap: break-all;
     overflow-y:auto;
     margin-top:20px;
     border-radius: 3px;
@@ -278,6 +276,7 @@ nav .brand-logo {
     margin-bottom:0;
     text-align: left;
 }
+
 
 .btn-light {
     color: rgb(255, 242, 210);
@@ -310,7 +309,6 @@ nav .brand-logo {
     margin-top: 0;
     margin-bottom: 10px;
     padding-left: 0;
-    text-decoration: italic;
     text-shadow: 0.5px 0.5px 1px black;
 }
 
@@ -351,14 +349,7 @@ nav .brand-logo {
         display: inline-block;
         width: 95%;
         height:250px;
-        overflow-wrap: break-all;
-        word-wrap: break-all;
         overflow-y:auto;
-    }
-
-    .scroll{
-        overflow-wrap: break-all;
-        word-wrap: break-all;
     }
 
     .format-text {
@@ -399,14 +390,7 @@ nav .brand-logo {
         display: inline-block;
         width: 100%;
         height:250px;
-        overflow-wrap: break-all;
-        word-wrap: break-all;
         overflow-y:auto;
-    }
-
-    .scroll{
-        overflow-wrap: break-all;
-        word-wrap: break-all;
     }
 
     .format-text {
@@ -460,8 +444,6 @@ nav .brand-logo {
     display: inline-block;
     width: 85%;
     min-height:300px;
-    overflow-wrap: break-all;
-    word-wrap: break-all;
     overflow-y:auto;
     margin-top:20px;
     border-radius: 3px;
@@ -517,7 +499,7 @@ nav .brand-logo {
 }
 
 .format-view {
-    white-space: normal;
+    white-space: pre;
     overflow-wrap: break-word;
     word-wrap: break-word;
     margin-left: 20px;
@@ -526,6 +508,7 @@ nav .brand-logo {
     margin-bottom:0;
     text-align: left;
     }
+
 
 .works-btn {
     margin-top: 10px;
@@ -542,6 +525,10 @@ nav .brand-logo {
     overflow-wrap: break-word;
     word-wrap: break-word;
     max-width: 40px;
+    background-color: rgba(20, 119, 36, 0.719);
+    padding: 2px;
+    color: rgb(255, 242, 210);
+    border-radius: 3px;
 }
 
 @media(min-width: 768px) {
